[gd_scene load_steps=4 format=3 uid="uid://yu0xhyysih47"]

[ext_resource type="Script" path="res://scene/launcher.gd" id="1_ju7v3"]
[ext_resource type="Texture2D" uid="uid://xgsp5gn0g7gs" path="res://assets/Flairs/Vector/flair_arrow_long.svg" id="2_gadot"]
[ext_resource type="Texture2D" uid="uid://dtc80m7g8j6bm" path="res://assets/Steam Deck/Vector/steamdeck_button_x_outline.svg" id="2_p8o1y"]

[node name="Launcher" type="Node2D"]
script = ExtResource("1_ju7v3")

[node name="SpeedSlider" type="HSlider" parent="."]
unique_name_in_owner = true
offset_left = -72.0
offset_top = 80.0
offset_right = 72.0
offset_bottom = 112.0
max_value = 1.0
step = 0.01

[node name="AngleSlider" type="HSlider" parent="."]
unique_name_in_owner = true
visible = false
offset_left = -72.0
offset_top = 88.0
offset_right = 72.0
offset_bottom = 112.0
max_value = 1.0
step = 0.01

[node name="AngleSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
texture_filter = 1
position = Vector2(0, 160)
scale = Vector2(2, 2)
texture = ExtResource("2_gadot")

[node name="SpinnerSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
texture = ExtResource("2_p8o1y")

[node name="LaunchLocation" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -40)

[node name="BallInLauncher" type="Area2D" parent="LaunchLocation"]
unique_name_in_owner = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LaunchLocation/BallInLauncher"]
position = Vector2(40, -8)
polygon = PackedVector2Array(-64, -272, -16, -272, -16, 24, -64, 24)

[node name="BallInFeed" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BallInFeed"]
position = Vector2(40, 32)
polygon = PackedVector2Array(-64, -24, -16, -24, -16, 16, -64, 16)

[node name="BlockFeed" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BlockFeed"]
position = Vector2(0, -4)
rotation = 1.57079
polygon = PackedVector2Array(-16, -24, -16, 24, 8, 24, 8, -24)

[connection signal="value_changed" from="SpeedSlider" to="." method="_on_speed_slider_value_changed"]
[connection signal="value_changed" from="AngleSlider" to="." method="_on_angle_slider_value_changed"]
